Z-index overlay fix

--- a/_scss/custom/_base.scss
+++ b/_scss/custom/_base.scss
@@ -11,7 +11,9 @@
  "components/splash",
  "breadcrumb";
 
-
+.wrapper {
+  position: relative;
+}
  .jumbotron {
      text-align: center;
      overflow: hidden;
