--- a/_scss/custom/components/_splash.scss
+++ b/_scss/custom/components/_splash.scss
@@ -9,9 +9,7 @@
     background-repeat: no-repeat;
     background-attachment: fixed; /* <= This one */
      width: 100%;
-     z-index:-1;
      &:before {
-       z-index: -1;
        top: 0;
      bottom: 0;
      left: 0;
